log
Fri May 13 15:50:16 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_final’:
sudoku.c:67:27: error: ‘o’ undeclared (first use in this function)
       if(n->sudo[i][j] == o){
                           ^
sudoku.c:67:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1f11c0a
Fri May 13 15:50:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
20d8ed3
Fri May 13 15:52:36 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1ac2cfc
Fri May 13 15:53:19 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
5c20d15
Fri May 13 15:53:46 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
be32f08
Fri May 13 16:06:36 UTC 2022: 
 sudoku.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
5f4180d
Mon May 16 03:29:12 UTC 2022: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:8: error: ‘l’ undeclared (first use in this function)
   for( l=0;l<9;l++)
        ^
sudoku.c:71:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
23e7165
Mon May 16 03:30:22 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
cff65f6
Mon May 16 03:32:30 UTC 2022: 
 sudoku.c | 69 ++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 43 insertions(+), 26 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:10: error: implicit declaration of function ‘lineaVacia’ [-Werror=implicit-function-declaration]
     flag=lineaVacia();
          ^~~~~~~~~~
sudoku.c:51:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c:64:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c:80:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c: At top level:
sudoku.c:103:6: error: conflicting types for ‘lineaVacia’
 int* lineaVacia()
      ^~~~~~~~~~
sudoku.c:51:10: note: previous implicit declaration of ‘lineaVacia’ was here
     flag=lineaVacia();
          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d7565e
